--- a/ClientApp/src/styles/devis.css
+++ b/ClientApp/src/styles/devis.css
@@ -3,17 +3,41 @@
     min-height:1000px;
     margin:20px auto;
     border : 0.2px solid gray;
+    padding:40px;
 }
+
+    .div-devis h1 {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-size: 22px;
+        font-weight : 500;
+        border-bottom: 3px solid #6664de;
+        color: #6664de;
+/*        padding: 15px;
+*/    }
 
 .div-container-auteur-client {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+   
 }
 
 .div-auteur, .div-client{
-    padding: 15px;
+    padding: 15px 0;
+    flex:50%;
+    margin:20px 0;
+}
+
+    .div-auteur img{
+        height:80px;
+        width:auto;
+        margin-bottom : 15px;
+    }
+
+.div-client {
+    border: 0.1px solid grey;
+    border-radius: 8px;
+    padding: 15px ;
 }
 
 .div-auteur p, .div-client p{
@@ -22,11 +46,12 @@
 .div-container-devis {
     width: 100%;
     margin: 20px auto;
-    padding: 15px;
+    padding: 15px 0;
 }
 
     .div-container-devis table {
         width: 100%;
+        margin: 20px 0;
     }
 
         .div-container-devis table thead tr,
@@ -49,6 +74,20 @@
             border-right: 0.3px solid grey;
         }
 
-            th, td {
+th, td {
     padding: 8px 0;
+    text-align:center;
+}
+
+.div-prix-parent {
+    position: relative;
+}
+
+.div-prix-total {
+    position: absolute;
+    right: 0;
+}
+
+.div-informations-suppementaires{
+    margin-top : 100px;
 }
