--- a/ClientApp/src/styles/auth.css
+++ b/ClientApp/src/styles/auth.css
@@ -1,6 +1,9 @@
 ﻿
     /*   color: #152e31; vert */
-    /* color: #112632; bleu */
+/* color: #112632; bleu 
+         #6664de; violet 
+    palevioletred; rose magnifique 
+    */
 
 nav{
     background-color:white;
