--- a/ClientApp/src/styles/PorgressBarCreationDevis.css
+++ b/ClientApp/src/styles/PorgressBarCreationDevis.css
@@ -10,7 +10,8 @@
     text-decoration:none;
     color:black;
 }
-    .stepper-item {
+
+.stepper-item {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -22,61 +23,21 @@
     }
 }
 
-    .stepper-item::before {
-        position: absolute;
-        content: "";
-        border-bottom: 2px solid #ccc;
-        width: 100%;
-        top: 20px;
-        left: -50%;
-        z-index: 2;
+.stepper-item button {
+    background-color :transparent;
+    border:none;
+    padding :15px;
+}
+
+
+.stepper-item.active {
+    font-weight: bold;
+    color:white;
+}
+
+    .stepper-item.completed {
+        background-color: #152e31;
     }
-
-    .stepper-item::after {
-        position: absolute;
-        content: "";
-        border-bottom: 2px solid #ccc;
-        width: 100%;
-        top: 20px;
-        left: 50%;
-        z-index: 2;
-    }
-
-    .stepper-item .step-counter {
-        position: relative;
-        z-index: 5;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        background: #ccc;
-        margin-bottom: 6px;
-    }
-
-    .stepper-item.active {
-        font-weight: bold;
-    }
-
-        .stepper-item.completed .step-counter {
-            background-color: #6664de;
-        }
-
-        .stepper-item.completed::after {
-            position: absolute;
-            content: "";
-            border-bottom: 2px solid #6664de;
-            width: 100%;
-            top: 20px;
-            left: 50%;
-            z-index: 3;
-        }
-
-    .stepper-item:first-child::before {
-        content: none;
-    }
-
-    .stepper-item:last-child::after {
-        content: none;
+    .stepper-item.completed div{
+        color: white;
     }
