--- a/ClientApp/src/styles/formCreationDevis.css
+++ b/ClientApp/src/styles/formCreationDevis.css
@@ -1,4 +1,20 @@
-﻿.formCreationDevis {
+﻿.page-formCreationDevis {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+    .page-formCreationDevis .formCreationDevis {
+        flex: 80%;
+        margin: -16px 12px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    
+    }
+
+.formCreationDevis {
     display: flex;
     flex-direction: column;
     align-items: center;
