--- a/ClientApp/src/styles/FormListeClientEntreprise.css
+++ b/ClientApp/src/styles/FormListeClientEntreprise.css
@@ -2,14 +2,14 @@
     border-bottom: 0.2px solid gray;
     padding: 20px 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: center;
     overflow: scroll;
     width: 900px;
 }
 
- h1{
-    font-size:21px;
+.formCreationDevis h1 {
+    font-size: 21px;
 }
 .ListeClient .divClient,
 .ListeEntreprise .divEntreprise {
