--- a/ClientApp/src/styles/FormListeClientEntreprise.css
+++ b/ClientApp/src/styles/FormListeClientEntreprise.css
@@ -2,10 +2,10 @@
     border-bottom: 0.2px solid gray;
     padding: 20px 0;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column-reverse;
     align-items: center;
     overflow: scroll;
-    width: 900px;
+    width: 100%;
 }
 
 .formCreationDevis h1 {
