--- a/ClientApp/src/styles/NavMenu.css
+++ b/ClientApp/src/styles/NavMenu.css
@@ -1,4 +1,5 @@
-﻿a.navbar-brand {
+﻿
+a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
@@ -15,4 +16,23 @@ html {
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.flex-center-wrap-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 10px;
+    padding: 10px;
+}
+
+.flex-center-wrap-row div{
+    margin : 10px;
+}
+
+.border{
+    border: 0.5px solid gray;
 }
